RESOLVED FIXED34974
Leak of ScheduledAction during layout tests
https://bugs.webkit.org/show_bug.cgi?id=34974
Summary Leak of ScheduledAction during layout tests
Mark Rowe (bdash)
Reported 2010-02-16 04:00:25 PST
<http://build.webkit.org/results/SnowLeopard%20Intel%20Leaks/r54814%20(4240)/DumpRenderTree2-leaks.txt> shows two instances of ScheduledAction being leaked during the layout tests.
Attachments
Patch v1 (12.18 KB, patch)
2010-02-16 04:13 PST, Mark Rowe (bdash)
ap: review+
Mark Rowe (bdash)
Comment 1 2010-02-16 04:13:02 PST
Created attachment 48804 [details] Patch v1
WebKit Review Bot
Comment 2 2010-02-16 04:17:50 PST
Attachment 48804 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/bindings/js/ScheduledAction.h:28: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 If any of these errors are false positives, please file a bug against check-webkit-style.
Alexey Proskuryakov
Comment 3 2010-02-16 13:13:25 PST
Comment on attachment 48804 [details] Patch v1 r=me, nice! Style bot complained correctly.
Mark Rowe (bdash)
Comment 4 2010-02-16 14:54:04 PST
Fixed in r54835.
Note You need to log in before you can comment on or make changes to this bug.